# VoxelSlicer

./: .gitignore  README.md  meson.build
src/: main.cc  main.cpp  model.cc  model.hh  shader.cc  shader.hh
